syntax ="proto3";

service OrderService {
    rpc GetAllOrder(Empty) returns (OrderList) {}
    rpc Get (OrderId) returns (OrderItem){}
    rpc Insert (OrderItem) returns (OrderItem) {}
    rpc Update (OrderItem) returns (OrderItem) {}
    rpc Remove (OrderId) returns (Empty) {}
}

message Empty{}

message OrderItem {
    optional string orderId =1;
    string userId=2;
    string restaurantId=3;
    optional int32 queueNumber=4;
    map<string,int32> orderLines=9;
    optional string orderStatus=5;
    optional int32 totalPrice=6;
    optional string createdTime=7;
    optional string pickupTime=8;
}

message OrderList{
    repeated OrderItem orders=1;
}

message OrderId{
    string orderId=1;
}